# rich-result

./: Cargo.toml  README.md
src/: lib.rs
