[package]
name = "rich-result"
version = "0.1.2"
edition = "2021"
authors = ["42triangles<42triangles@tutanota.com>"]
description = "Rich result type differentiating between recoverable & fatal errors"
repository = "https://github.com/42triangles/rich-result"
license = "CC0-1.0"
keywords = ["result", "error"]
categories = ["data-structures", "no-std", "rust-patterns"]

[features]
std = []

[dependencies]
